@@ -19,7 +19,7 @@ fields, which each can have any number of values. For example, to tag
 files, the `tag` field is typically used, with values set to each tag that
 applies to the file.
 
-The field names are freeform (but cannot include spaces). The metadata
+The field names are limited to alphanumerics (and `[_-.]`). The metadata
 values can contain absolutely anything you like -- but you're recommended
 to keep it simple and reasonably short.
 
